# PAINTSOL

backend/: main.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: PixelGrid.vue  TopBar.vue  WalletConnector.vue
